--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -14,13 +14,13 @@ button,
 	color: _palette(fg-bold) !important;
 	cursor: pointer;
 	display: inline-block;
-	font-size: 0.6em;
+	font-size: 0.75em;
 	font-weight: _font(weight-bold);
-	height: calc(4.75em + 2px);
+	//height: calc(4.75em + 2px);
 	letter-spacing: _font(kerning-alt);
-	line-height: 4.75em;
+	//line-height: 4.75em;
 	outline: 0;
-	padding: 0 3.75em;
+	padding: 15px 3.5em;
 	position: relative;
 	text-align: center;
 	text-decoration: none;
